--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,13 @@ p:nth-child(5) {
 a {
    font-size: 12px;
 }
-
+p{
+   color: white;
+   width: 350px;
+   font-size: 16px;
+   padding: 10px;
+   background: linear-gradient(to bottom right, darkblue, skyblue);
+   box-shadow: 5px 5px 6px gray;
+   border-radius: 5px;
+}
 /* TODO: Add styles here */
